@@ -10,6 +10,8 @@
 	<li>Added two exceptions to the LGPL to support static
 	linking of applications against Mini-XML.</li>
 
+	<li>Added mxmlElementSetAttrf() function (STR #43)</li>
+
 	<li>Added snprintf() emulation function for test program
 	(STR #32)</li>
 
